--- a/ig.html
+++ b/ig.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="form-container">
-                    <form id="form"  method="POST" action="https://formsubmit.io/send/1b814e9a-f1bb-467e-bba1-c718cf9632cb
+                    <form id="form"  method="POST" action="https://formsubmit.io/send/ademosuemmanuel52@gmail.com
 ">
 
                     <div class="form-content box">
